--- a/client/style/styles.css
+++ b/client/style/styles.css
@@ -7,9 +7,13 @@
 #show-new-item-form {
   font-size: 1.2em;
   display: block;
-  width: 36px;
+  width: 100%;
   height: 36px;
   margin: auto auto; }
 
 #new-todo-form {
   display: none; }
+
+#title {
+  text-align: center;
+  font-size: 4.6em; }
